--- a/slr-api/pom.xml
+++ b/slr-api/pom.xml
@@ -11,6 +11,11 @@
     
     <dependencies>
         <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>5.2.4</version>
+        </dependency>
+        <dependency>
             <groupId>com.wissensalt.rnd</groupId>
             <artifactId>slr-shared-data</artifactId>
             <version>1.0-SNAPSHOT</version>
